# dces-rust

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: basic.rs  context.rs  init_cleanup.rs  minimal.rs  resources.rs  shared.rs  string_key.rs
src/: entity.rs  error.rs  lib.rs  prelude.rs  resources.rs  system.rs  tests.rs  world.rs
src/component/: component_store.rs  mod.rs  string_component_store.rs  tests.rs  type_component_store.rs
src/entity/: mod.rs  string_component_store.rs  tests.rs  type_component_store.rs
src/system/: mod.rs  tests.rs
src/world/: mod.rs  tests.rs
tests/: tests.rs
