[package]
name = "dces"
version = "0.1.5"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "DCES entity component system"
documentation = "https://docs.rs/dces"
license = "MIT"
repository = "https://gitlab.redox-os.org/redox-os/dces-rust"
keywords = ["ecs", "ui", "gamedev"]
readme = "README.md"
edition = "2018"